# ccos

./: .gitignore  .npmrc  AGENTS.md  Caddyfile  DEPLOY.md  PRODUCT.md  README.md  REQUIREMENT_DOC.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 46ae677e0465_initial_schema.py  50d29fefb6cf_agencies_and_campaign_influencer_agency_.py  53ad39e78c9f_org_scoping.py  8f7b2c3d4e5f_youtube_channel_id.py  dccaf4ae84dd_metric_influencer_scope.py
apps/api/app/: cli.py  crud.py  main.py  tasks.py  worker.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: agencies.py  ai.py  analytics.py  campaign_influencers.py  campaigns.py  deliverables.py  influencers.py  insights.py  instagram.py  metrics.py  posts.py  reports.py  youtube.py
apps/api/app/core/: auth.py  config.py  database.py
apps/api/app/models/: __init__.py  agency.py  base.py  campaign.py  campaign_influencer.py  deliverable.py  enums.py  influencer.py  insight.py  metric.py  post.py
apps/api/app/schemas/: agency.py  campaign.py  campaign_influencer.py  common.py  deliverable.py  influencer.py  insight.py  instagram.py  metric.py  post.py  trends.py  youtube.py
apps/api/app/services/: ai_insights.py  analytics.py  imports.py  instagram.py  metric_engine.py  reports.py  roster.py  youtube.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json
apps/web/src/: proxy.ts
(+51 files in other folders)
