[project]
name = "ccos-api"
version = "0.1.0"
description = "CCOS FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "greenlet>=3.1",
    "openpyxl>=3.1",
    "python-multipart>=0.0.12",
    "instagrapi>=2.5",
    "celery[redis]>=5.4",
    "groq>=0.13",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI relies on Depends()/Query() as argument defaults (idiomatic).
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
